# LlamaClaw

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  bot.py  cli.py  clients.py  config.py  main.py  models.py  repositories.py  research_worker.py  services.py  storage.py
data/: eval_recent_ai_report.txt  eval_recent_ai_report_v2.txt  eval_recent_ai_report_v3.txt  eval_recent_ai_report_v4.txt  eval_recent_ai_report_v5.txt  eval_recent_ai_report_v6.txt
data/system/: system_prompt.txt
llamaclaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install_local.ps1  run_local.ps1
tests/: test_context.py  test_memory_refresh.py  test_onboarding.py
